Revert "Fix overflow in ans-grid-headers"
This reverts commit a492043cce9a22cb15bc68a364e0396559099ccb.

--- a/styles/mystyle.css
+++ b/styles/mystyle.css
@@ -498,7 +498,6 @@ li .sub {
     min-width: 6rem;
     min-height: 6rem;
     box-sizing: border-box;
-    overflow: hidden;
 }
 
 .ans-grid-header .ans-grid-content {
